@@ -4,6 +4,7 @@
 	  in the ssl library.
 	- Fix that ratelimit and ip-ratelimit are applied after reload of
 	  changed config file.
+	- Resize ratelimit and ip-ratelimit caches if changed on reload.
 
 16 July 2018: Wouter
 	- Fix qname minimisation NXDOMAIN validation lookup failures causing
